Updates to Gagnon 2007

--- a/Gagnon2007_batchmodel/Gagnon2007_batch_model.ipynb
+++ b/Gagnon2007_batchmodel/Gagnon2007_batch_model.ipynb
@@ -1,6 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Batch Model - Precipitation from a closed pool\n",
+    "\n",
+    "Gagnon et al. 2007 develop a simple and general relationship for multiple Me/Ca ratio behaviour during Rayleigh fractionation.\n",
+    "\n",
+    "Following Elderfield et al (1996), the Sr/Ca of aragonite precipitated at any point during a Rayleigh process from a closed solution can be calculated from the initial composition assuming a constant effective partition coefficient:\n",
+    "\n",
+    "$$\n",
+    "\\left(\\frac{Sr}{Ca}\\right)_{coral} = D_{Sr}^{Coral} \\left(\\frac{Sr}{Ca}\\right)_{Sol_{0}} F^{D_{Sr}^{Coral}-1}\n",
+    "$$\n",
+    "\n",
+    "Where the extent of precipitation (i.e. fraction of Ca remaining in the solution) is defined as:\n",
+    "\n",
+    "$$\n",
+    "F = \\left(\\frac{Ca}{Ca_{0}}\\right)_{sol}\n",
+    "$$\n",
+    "\n",
+    "The same expression can be written for Mg/Ca, and since Mg/Ca and Sr/Ca are linked by the extent of precipitation, F, the expressions can be combined, yielding a linear log-log relationship:\n",
+    "\n",
+    "$$\n",
+    "\\ln \\left(\\frac{Sr}{Ca}\\right) = \\left(\\frac{D_{Sr}-1}{D_{Mg}-1}\\right) \\ln \\left(\\frac{Mg}{Ca}\\right) + \\left\\{ \\ln \\left(\\frac{Sr}{Ca}\\right)_{0} - \\left(\\frac{D_{Sr}-1}{D_{Mg}-1}\\right) \\ln \\left(\\frac{Mg}{Ca}\\right)_{0} \\right\\}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -44,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -70,6 +99,13 @@
     "plt.ylabel('Ln(Sr/Ca)')\n",
     "plt.ticklabel_format(useOffset=False)\n",
     "#plt.legend(title=\"gamma=\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Try in all mmol/mol in case I am making mistakes with the converting..."
    ]
   },
   {
@@ -152,7 +188,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -181,6 +219,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Try in all mmol/mol again"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -200,7 +245,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -229,31 +276,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 58,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-58-2146fa40a9f5>:1: RuntimeWarning: invalid value encountered in log\n",
-      "  np.log(-6)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "nan"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "np.log(5.1)"
+    "Ok, this we are getting the same thing, so it is not a units problem here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now we define a batch model with active calcium pumping.\n",
+    "\n",
+    "We incorporate the variable $\\phi$, which accounts for changes in $\\left([Ca\\right])_{Sol}$ affecting all Me/Ca ratios."
    ]
   },
   {
@@ -261,7 +296,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Write equation as a function (for non-log graph)\n",
+    "\n",
+    "def SrCaCoral(phi, Dsr, Dmg, MgCa_coral, SrCa_sol0, MgCa_sol0):\n",
+    "    return (np.exp(((phi*Dsr-1)/(phi*Dmg-1)) * np.log(MgCa_coral) + (np.log(SrCa_sol0) - ((phi*Dsr-1)/(phi*Dmg-1)) * np.log(MgCa_sol0))))\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
