--- a/Gagnon2012_steady_state_model/Gagnon2012_SteadyStateModel.ipynb
+++ b/Gagnon2012_steady_state_model/Gagnon2012_SteadyStateModel.ipynb
@@ -285,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Why is it flipping at 0.5? Flip point appears to be controlled by gamma, which is set to 0.5\n",
+    "Flip point appears to be controlled by gamma, i.e. flips at 0.5 if gamma is set to 0.5\n",
     "\n",
     "Will flip at 1 if gamma is set to 0 (i.e. no calcium from pumping). If gamma is 1 and D is 1, we go to infinity...  \n",
     "\n",
